--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ p {font-size: 14pt}
 .jewel {
     border-collapse: collapse;
  }
- jewel td, .jewel th {
+ .jewel td, .jewel th {
     padding: 5px;
     text-align: left;
     border-bottom: 1px solid #25825250;
