--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@ body {font-family: Arial, "Arial"; margin: 0;}
 
 .btn {
   border-radius: 5px;
-  padding: 10px;
+  padding: 5px;
   color: black;
   background-color: white;
   border: 1px solid #333;
   text-decoration: none;
-  font-size: 14pt;
+  display: inline-block;
 }
 
 .btn-gradient-green{
