--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ body {font-family: Arial, "Arial"; margin: 0;}
   border: 1px solid #333;
   text-decoration: none;
   display: inline-block;
+  width: auto;
+  height: auto;
+  margin-up: 1px;
 }
 
 .btn-gradient-green{
